Create input field for number of particles to be added

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Particle Visualizer</h1>
     <script src="main.js"></script>
+    <input type="number" id="count" min="1" max="500">
+    <label for="count">Number of Particles</label>
 </body>
 </html>
